--- a/Miniproject/readme.tex
+++ b/Miniproject/readme.tex
@@ -1,4 +1,4 @@
--------------Basic information-------------------
+-------------Basic information-------------
 Title: Miniproject
 Author: Yuan Zhang
 Time: March 2020
@@ -13,7 +13,7 @@ ggplot2 was used for plotting,
 minpack.lm was used to conduct non-linear models. 
 
 
------------------- Content -----------------------
+------------------ Content ----------------
 ├── Code
 │   ├── Data_preparation.R
 │   ├── Materials
@@ -38,6 +38,6 @@ minpack.lm was used to conduct non-linear models.
 │   ├── Miniproject.pdf
 │   └── respective_plots: includes 275 plots for unique dataset
 │       
-└── readme.md
+└── readme.txt
 
 5 directories, 292 files
