--- a/Miniproject/Code/Miniproject.tex
+++ b/Miniproject/Code/Miniproject.tex
@@ -162,15 +162,15 @@ It needs to be pointed that, to take the most efficient work, in this research P
 \section{Results}
 \subsection{Fitting percentage of 4 models}
 The four models are compared with respect to the probability of fitting to 275 data sets. It can be clearly seen in Figure 2 that the mechanistic model (Logistic) has the highest match rate (98.5\%). Two phenomena models (Baranyi and Gompertz) are also very high, which have 76.7\% and 88.7\% respectively. However, the fitting percentage of the Buchanan model is exceptionally low, indicating that less than half of the data set can be adapted to this model (41.8\%). 
-		\begin{figure}[h]
+		\begin{figure}[htpb]
 		\centering
 		\includegraphics[width = 0.6\textwidth]{../Results/Fitting_percentage.png}
-		      \caption{Figure 2. Percentage of model fitting}
+		      \caption{Percentage of model fitting}
 	    \end{figure}
 	    
 \subsection{Best fitting model assessment}
 Figure 3 shows the percentage of each model that was rated as the best fitting. It can be seen that both phenomena models (Baranyi and Gompertz) are higher than mechanical models (Logistic and Buchanan), of which the Gompertz model (37.5\% of AIC and 36.7\% of BIC) has the remarkably highest optimal rate. Whereas, the Buchanan model still gets a very deficient optimal percentage(10.2\% of AIC and 9.5\% of BIC). There are some differences between the fitness of the models and neither can consistently offer the best fit to almost every growth curve.
-\begin{figure}[h]
+\begin{figure}[htpb]
 \centering
 \includegraphics[width = 0.6\textwidth]{../Results/Bestfitting.png}
         \caption{Percentage of Best model fitting for each model}
@@ -179,7 +179,7 @@ Figure 3 shows the percentage of each model that was rated as the best fitting. 
 
 \subsection{Four model fittings on one species with different temperatures}
 One species with different temperatures was selected randomly as an example to present the model fitting situations about this unique ID. The species is $Staphylococcus\,spp.$, whose database is focusing on the bacterial growth on the raw Chicken Breast \citep{R19}. This measurement has 6 types of temperature. Figure 4 shows that in this example, the result is that most models still have a relatively good fit at different temperatures. Therefore, specifically from this example, it is undeniable that the effect of temperature on the fitness of the model is basically non-existent. Moreover, it can be seen from Figure 4. b that when the temperature is 4 degrees Celsius, the data is relatively small, and the Buchanan model deviates significantly from the actual situation. It is worth mentioning that both in Figure 4.b and 4.c that there is a downward trend at the end period of each curve, but each model does not fit well and does not reflect the decreasing part. Furthermore, it also could be found that the Logistic model has an upturned part at the beginning of Figure 4.a, c, d, and e. Compared with other models, it does not fit well in the lag-time duration.
-\begin{figure}[h]
+\begin{figure}[htpb]
 \centering
 \includegraphics[width = \textwidth]{../Code/Materials/figure4.jpg}
        \caption{Four model fittings on one species ($Staphylococcus\,spp.$) with different temperatures }
