--- a/Mainproject/code/2. Data Available Summary.ipynb
+++ b/Mainproject/code/2. Data Available Summary.ipynb
@@ -48,8 +48,8 @@
    "metadata": {},
    "source": [
     "|**No.**| **Order** |**Species**|**Development Time**|**Peak Fecundity Rate**|**Adult Mortality Rate**|**Juvenile Mortality Rate**|**Fecundity Loss Rate**| **Location**| **Remarks**|\n",
-    "|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:----------:|---------:|\n",
-    "| | | |$a$|$b_{pk}$|$z$|$z_J$|$\\kappa$||\n",
+    "|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:----------:|\n",
+    "| | | |$a$|$b_{pk}$|$z$|$z_J$|$\\kappa$|||\n",
     "|4.|Diptera|*Aedes aegypti*|-|**Oviposition Rate (Eggs per day per female)** |**1.Survival Time (days)** <br> **2.Mortality Rate (1/day)**|-|-|Marília,  São Paulo State, Brazil|The oviposition rate at different temperatures is considered to be maximum (bpk), as every temperature only have one oviposition rate.|\n",
     "|5.|Diptera|*Aedes albopictus* | **Development Rate (1/day)**|**Oviposition Rate (eggs per female per cycle)**|**Percentage Survival(%)[no time information,deleted]**|**Percentage Survival(%)[no time information,deleted]**|-|Saint Pierre, France|-|\n",
     "|6.|Diptera|*Aedes camptorhynchus*|**Development time (days)**|Fecundity (Eggs/7days) [only one temperature  information,deleted]|-|**Juvenile survival (proportion) [no time information,deleted]**|-|Breamlea flora reserver (near Geelong, Victoria, Australia)|Stages(larvae + pupae)for Development time|\n",
@@ -72,8 +72,8 @@
    "metadata": {},
    "source": [
     "| **No.**| **Order** |**Species**|**Development Time**|**Peak Fecundity Rate**|**Adult Mortality Rate**|**Juvenile Mortality Rate**|**Fecundity Loss Rate**|  **Location**|**Remarks**\n",
-    "|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:----------:|---------:|\n",
-    "| | | |$a$|$b_{pk}$|$z$|$z_J$|$\\kappa$||\n",
+    "|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:----------:|\n",
+    "| | | |$a$|$b_{pk}$|$z$|$z_J$|$\\kappa$|||\n",
     "|10.|Hemiptera|*Aphis gossypii*|**1.Development Rate (1/day), <br> 2.Development Time (Day/individual)** <br>|**Fecundity Rate (nymphs/female/day)** | **1.Longevity (day/individual)**, <br> **2.Survival Rate (Individuals/ day)**|**Mortality Rate [event/(individual *24 hours)]**|**Fecundity Rate (nymphs/female/day)** |Tehran, Iran;\tAdana, Turkey| Mortality Rate (%) is about Nymph, which needs to be deleted; Mortality Rate [event/(individual *24 hours)]is about stage of juvenile, which needs to be retained|\n",
     "|11.|Hemiptera|*Corythucha ciliata*| **1.Development Time (Days),** <br> **2.Development Rate<br> (100 individuals/day)**|**Fecundity (Eggs/ female)**|**1.Longevity (Days), <br> 2.Percentage Survival (%) [no time information, deleted]**|-|-|Longwu Road, Shanghai, China|Fecundity need to find experimental period, missing per day|\n",
     "|12.|Hemiptera|*Planococcus citri*|**1.Generation Time <br>(Day/individual), <br>2.Development time  (Day/individual)**|-|**Longevity (Day/individual)**|-|-|Mahallat, Iran|Longevity : male/felmale; male data was deleted|\n",
@@ -93,7 +93,7 @@
    "metadata": {},
    "source": [
     "| **No.**| **Order** |**Species**|**Development Time**|**Peak Fecundity Rate**|**Adult Mortality Rate**|**Juvenile Mortality Rate**|**Fecundity Loss Rate**| **Location**|**Remarks**\n",
-    "|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|-------:|\n",
+    "|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|\n",
     "| | | |$a$|$b_{pk}$|$z$|$z_J$|$\\kappa$|||\n",
     "|13.|Hymenoptera|*Euplectrus ronnai*|**Development Time <br>(days/individual)**|-|-|**Mortality Rate (Deaths/(individual*24 hours))** |-|Curitiba, Parana, Brazil| development time: larvae/pupae; Mortality Rate: juvenile\n",
     "|14.|Hymenoptera|*Glyptapanteles muesebecki*|**Development Time <br>(days/individual)**|-|-|-|-|Brazil|Development time: larvae/pupae;add them up|\n",
@@ -120,7 +120,7 @@
    "source": [
     "| **No.**| **Order** |**Species**|**Development Time**|**Peak Fecundity Rate**|**Adult Mortality Rate**|**Juvenile Mortality Rate**|**Fecundity Loss Rate**| **Location**|**Remarks**|\n",
     "|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|-------:|\n",
-    "| | | |$a$|$b_{pk}$|$z$|$z_J$|$\\kappa$| |\n",
+    "| | | |$a$|$b_{pk}$|$z$|$z_J$|$\\kappa$| ||\n",
     "|23.| Lepidoptera|*Cydia pomonella*| **Development Time (days/individuals)**|-|-|-|-|Maragheh region, East Azerbaijan, Iran (collected); Tehran, Iran (measurement)|Stages of development time are egg/larvae/pupae|"
    ]
   },
@@ -137,7 +137,7 @@
    "source": [
     "| **No.** | **Order** |**Species**|**Development Time**|**Peak Fecundity Rate**|**Adult Mortality Rate**|**Juvenile Mortality Rate**|**Fecundity Loss Rate**| **Location**|**Remarks**|\n",
     "|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|--------:|\n",
-    "| | | |$a$|$b_{pk}$|$z$|$z_J$|$\\kappa$| |\n",
+    "| | | |$a$|$b_{pk}$|$z$|$z_J$|$\\kappa$| ||\n",
     "|24.| Psocoptera|*Lepinotus reticulatus*| **Development Time (days)**|-|**Survivorship(individuals/day)**|-|-|Manhattan, Kansas|Development time: 1st instar, 2nd instar, 3rd instar, 4th instar; Survivorship: proportion of nymphs surviving to adults|"
    ]
   },
@@ -154,7 +154,7 @@
    "source": [
     "| **No.** | **Order** |**Species**|**Development Time**|**Peak Fecundity Rate**|**Adult Mortality Rate**|**Juvenile Mortality Rate**|**Fecundity Loss Rate**| **Location**|**Remarks**|\n",
     "|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|:--------:|\n",
-    "| | | |$a$|$b_{pk}$|$z$|$z_J$|$\\kappa$| |\n",
+    "| | | |$a$|$b_{pk}$|$z$|$z_J$|$\\kappa$| ||\n",
     "|25.| Prostigmata|*Tetranychus mcdanieli*| **Development Rate (1/day)**|-|-|**Percentage Survival(%)**|-|Quebec City, Canada|Development rate: Egg, Larvae, \tProtonymph, Deutonymph; Percentage Survival: noun information|"
    ]
   },
